--- a/Task3/index.html
+++ b/Task3/index.html
@@ -4,31 +4,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <title>Document</title>
 </head>
 
 <body>
-    <h1 class="head">This is a heading with head as a class</h1>
+    <nav class="navbar">
+        <ul>
+            <li>logo</li>
+            <ol>
+                <a>Logo</a>
+                <a>Home</a>
+                <a>Services</a>
+                <a>About US</a>
+                <a>Contact Us</a>
+                <button>Username</button>
+            </ol>
+        </ul>
+    </nav>
+    <section class="Hero">
+        <div class="left">
+            <div class="heading">
+                <h1>
+                    <pre>
+                    Revitalize Your 
+                    Clothes with Expert
+                    <span>Laundry Services!</span>
+                    
+                </pre>
+                </h1><br><br>
 
-    <h2 class="head" id="bglime">This is h2 heading with <span>"head"</span>as a class and "bglime"as an id</h2>
-    <h4 class="head">This is a heading with head as a class</h4>
-    <p>This is a paragraph tag without any id or class styled using "p" element selector</p>
-    <p id="para">Tis is a paragraph tag with para as an id</p>
-    <p>This is a <span>paragraph</span> tag without any id or class styled using "p" element selector</p>
-    <h2>Show this output without inline CSS nor using class or id for "a" tag.</h2>
-    <ul>
-        <li style="color: white;">Click <span style="background-color: yellow;">here</span> to go to UPskillMafia</li>
-        <li style="color: white;">Click <span style="background-color: blueviolet;">here</span> to go to Google</li>
-    </ul>
-    <ol type="1">
-        <li>This is li tag without any id or class</li>
-        <li style="color: blue;">This is li tag without any id or class and is in blue color</li>
-        <li style="color:red;">This is li tag without any id or class and is in red color</li>
-        <li>This is li tag without any id or class</li>
-        <li>This is li tag without any id or class</li>
-    </ol>
+                <div class="desc">
+                    <pre>
+                        From Preminum dry cleaning to swift wash and fold we 
+                        deliver care and convenience.Schedule a pickup and
+                        rediscover the freshness of your clothes today!
+                </pre>
+                    <button>Book a Service Today!</button>
+                </div>
 
+            </div>
+
+
+        </div>
+        <div class="right">
+            <img src="laundryrigth.jpeg" alt="image">
+
+        </div>
+
+    </section>
 
 </body>
 
