task 3 loaded updated

--- a/Task3/index.html
+++ b/Task3/index.html
@@ -10,10 +10,11 @@
 
 <body>
     <div class="container">
-        <img src="nature.webp" alt="Image">
+        <div class="image-display">
+            <img src="nature.webp" alt="Image">
+
+        </div>
         <button class="btn-grad">Click me</button>
-
-
     </div>
 
 </body>
