--- a/Task12/index.html
+++ b/Task12/index.html
@@ -9,16 +9,15 @@
 
 <body>
     <input id="input" placeholder="Write s number">
-    <button onclick="cal()"></button>
+    <button onclick="cal()">Calculation</button>
 
 </body>
 <script>
     function cal(accum, cur) {
         let result = document.getElementById("input").value;
-        for (i = 0; i < result.length; i++)
-            if (accum + cur) {
-                document.getElementById("result").innerHTML = result;
-            }
+        for (i = 0; i < result.length; i++) {
+
+        }
     }
 
 </script>
