--- a/Task12/index.html
+++ b/Task12/index.html
@@ -16,6 +16,9 @@
     function cal(accum, cur) {
         let result = document.getElementById("input").value;
         for (i = 0; i < result.length; i++) {
+            for (j = i + 1; j < result.length; j++) {
+                console.log(i + j)
+            }
 
         }
     }
