the task updated

--- a/Task12/index.html
+++ b/Task12/index.html
@@ -15,6 +15,9 @@
 <script>
     function cal(accum, cur) {
         let result = document.getElementById("input").value;
+        for (i = 0; i <= result.length; i++) {
+
+        }
     }
 
 
