--- a/Task13/index.html
+++ b/Task13/index.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html>
+<style>
+    .container {
+        margin-left: 20%;
+        width: 50%;
+        height: 300px;
+        border: 2px solid black;
+    }
+
+    .container input {
+        margin-top: 10%;
+        margin-left: 20%;
+        width: 60%;
+        height: 30px;
+
+    }
+
+    .container button {
+        margin-left: 40%;
+        width: 20%;
+        height: 30px;
+
+    }
+</style>
 
 <body>
-    <input type="text" id="arrayInput" placeholder="Enter array elements separated by commas" />
-    <button onclick="displayArray()">Display Array</button>
-    <div id="arrayDisplay"></div>
-    <div id="maxDisplay"></div>
-    <div id="sum"></div>
+    <div class="container">
+        <input type="text" id="arrayInput" placeholder="Enter the array" /><br><br>
+        <button onclick="displayArray()">Display Array</button>
+        <div id="arrayDisplay"></div>
+        <div id="maxDisplay"></div>
+        <div id="sum"></div>
+    </div>
 
     <script>
         function displayArray() {
