--- a/Task13/index.html
+++ b/Task13/index.html
@@ -22,15 +22,25 @@
         height: 30px;
 
     }
+
+    .output {
+        margin-top: 40%;
+        margin-left: 10%;
+        border: 2px solid black;
+        width: 80%;
+        height: 100px;
+    }
 </style>
 
 <body>
     <div class="container">
         <input type="text" id="arrayInput" placeholder="Enter the array" /><br><br>
         <button onclick="displayArray()">Display Array</button>
-        <div id="arrayDisplay"></div>
-        <div id="maxDisplay"></div>
-        <div id="sum"></div>
+        <div class="output">
+            <div id="arrayDisplay"></div>
+            <div id="maxDisplay"></div>
+            <div id="sum"></div>
+        </div>
     </div>
 
     <script>
