--- a/Task13/index.html
+++ b/Task13/index.html
@@ -28,7 +28,8 @@
         margin-left: 10%;
         border: 2px solid black;
         width: 80%;
-        height: 100px;
+        height: 300px;
+        text-align: center;
     }
 </style>
 
@@ -40,6 +41,7 @@
             <div id="arrayDisplay"></div>
             <div id="maxDisplay"></div>
             <div id="sum"></div>
+            <div id="odd"></div>
         </div>
     </div>
 
@@ -67,6 +69,9 @@
             }
             let sumDisplay = document.getElementById("sum");
             sumDisplay.textContent = `sum:${sum}`
+
+
+
         }
     </script>
 </body>
