--- a/Task13/index.html
+++ b/Task13/index.html
@@ -71,7 +71,7 @@
             let sumDisplay = document.getElementById("sum");
             sumDisplay.textContent = `sum of elements:${sum}`
 
-            let oddNumbers = array.filter(num => num % 2 !== 0);
+            let oddNumbers = array.filter(num => num % 2 === 1);
             let oddDisplay = document.getElementById('odd')
             oddDisplay.textContent = `count of odd Number :${oddNumbers}`
 
